--- a/app/views/partials/_errors.erb
+++ b/app/views/partials/_errors.erb
@@ -1,5 +1,5 @@
 <div id="errors" >
   <% messages.each do |message| %>
-    <%= message %>
+    <h5 class="errors"><%= message %></h5>
   <%end%>
 </div>
