--- a/app/views/posts/question.erb
+++ b/app/views/posts/question.erb
@@ -1,8 +1,19 @@
 <div class="container">
 <h1><%= @question.title %></h1>
-<h5>Submitted by: <%= @question.user.username %>; on: <%= @question.created_at %></h5>
+<h5>Submitted by: <%= @question.user.username %>; on: <%= timeago(@question.created_at) %></h5>
 <p><%= @question.content %></p><br>
 
 <% @answers.each do |answer| %>
   <%= erb :"partials/_answer_display", locals: {answer: answer} %>
+<% end %>
+
+<!-- new question button  answer this question can only be seen if logged in-->
+
+<% if current_user %>
+  <form  action= <%="/questions/#{@question.id}/answers" %> method="post">
+    <input type="hidden" name="answer[user_id]" value= <%= current_user.id %> >
+    <input type="hidden" name="answer[question_id]" value= <%=@question.id %> >
+    <textarea name="answer[content]" placeholder="What is the answer?"></textarea><br><br>
+    <button id= "new_answer_button" >Submit Answer</button>
+  </form>
 <% end %>
