--- a/app/views/partials/_new_comment_form.erb
+++ b/app/views/partials/_new_comment_form.erb
@@ -1,4 +1,4 @@
 <form class = "comment_form" method="post" action="/comments">
-  <textarea name="content" placeholder="Enter comment here"></textarea>
+  <textarea name="content" placeholder="Enter comment here" autofocus></textarea>
   <input type="submit" value="Submit Comment">
 </form>
