--- a/app/views/partials/_answer_display.erb
+++ b/app/views/partials/_answer_display.erb
@@ -1,3 +1,3 @@
 <h5>Score: <%= answer.score %></h5>
 <p><%= answer.content %></p>
-<h5>posted by: <%= answer.user.username %>; posted: <%= timeago(answer.created_at) %></h5><br>
+<h5>posted by: <%= answer.user.username %>, <%= timeago(answer.created_at) %></h5><br>
