--- a/app/views/partials/_navbar.erb
+++ b/app/views/partials/_navbar.erb
@@ -12,7 +12,7 @@
         <div class="form-group" style="margin-top:10px">
           <input type="text" name="username" placeholder="User name">
           <input type="password" name="password" placeholder="Password">
-          <input type="submit" value="Login">
+          <input type="submit" id="login" value="Login">
         </div>
       </ul>
       <ul class="nav navbar-nav navbar-right">
