--- a/app/views/partials/_question_link.erb
+++ b/app/views/partials/_question_link.erb
@@ -1,3 +1,3 @@
-Title: <a href= <%= "/questions/#{question.id}" %> ><%= question.title %></a><br>
+<h4><a href= <%= "/questions/#{question.id}" %> ><%= question.title %></a></h4>
 Score: <%= score %>; Answers: <%= answer_count %>; By: <%= question.user.username %>
 <br><br>
