--- a/app/views/posts/question.erb
+++ b/app/views/posts/question.erb
@@ -1,28 +1,33 @@
 <div class="container">
+  <div class="jumbotron">
 
-  <div class="question" data-id=<%=@question.id%>>
-    <h1><%= @question.title %></h1>
-    <h5>Submitted by: <%= @question.user.username %>; on: <%= @question.created_at %></h5>
-    <p><%= @question.content %></p><br>
-    <%=erb :'partials/_show_comments', locals: {comments: @question.comments}%>
-  </div>
+    <div class="question" data-id=<%=@question.id%>>
+      <h1><%= @question.title %></h1>
+      <h5>Submitted by: <%= @question.user.username %>, <%= timeago(@question.created_at) %></h5>
+      <p><%= @question.content %></p>
+      <%=erb :'partials/_show_comments', locals: {comments: @question.comments.reverse}%>
+    </div>
 
     <% @answers.each do |answer| %>
       <div class="answer" data-id=<%=answer.id%> >
         <%= erb :"partials/_answer_display", locals: {answer: answer} %>
-        <%=erb :'partials/_show_comments', locals: {comments: answer.comments}%>
+        <%=erb :'partials/_show_comments', locals: {comments: answer.comments.reverse}%>
       </div>
     <% end %>
+
+    <!-- new question button  answer this question can only be seen if logged in-->
+    <br><br>
+    <% if current_user %>
+      <form  action= <%="/questions/#{@question.id}/answers" %> method="post">
+        <input type="hidden" name="answer[user_id]" value= <%= current_user.id %> >
+        <input type="hidden" name="answer[question_id]" value= <%=@question.id %> >
+        <textarea name="answer[content]" placeholder="What is the answer?"></textarea><br><br>
+        <button id= "new_answer_button" >Submit Answer</button>
+      </form>
+    <% else %>
+      <p>Please sign in to comment, add an answer, or post a new question.</p>
+
+    <% end %>
+
+  </div>
 </div>
-
-
-<!-- new question button  answer this question can only be seen if logged in-->
-
-<% if current_user %>
-  <form  action= <%="/questions/#{@question.id}/answers" %> method="post">
-    <input type="hidden" name="answer[user_id]" value= <%= current_user.id %> >
-    <input type="hidden" name="answer[question_id]" value= <%=@question.id %> >
-    <textarea name="answer[content]" placeholder="What is the answer?"></textarea><br><br>
-    <button id= "new_answer_button" >Submit Answer</button>
-  </form>
-<% end %>
