--- a/public/css/application.css
+++ b/public/css/application.css
@@ -2,7 +2,7 @@
   margin: 20px auto;
   width: 600px;
   padding: 0px 20px 20px 20px;
-  border: 1px dotted black;
+ /* border: 1px dotted black;*/
 }
 th {
   text-align: left;
@@ -10,3 +10,10 @@ th {
 .errors {
   color: red;
 }
+
+.answer {
+  border-left: 2px solid black;
+  margin-left: 10px;
+  padding-left: 20px;
+}
+
