--- a/app/views/partials/_show_comments.erb
+++ b/app/views/partials/_show_comments.erb
@@ -1,7 +1,7 @@
 <div class="comments">
   <ul>
     <% comments.each do |comment|%>
-      <li><%= erb :'partials/_single_comment', locals: {comment: comment} %></li>
+      <%= erb :'partials/_single_comment', locals: {comment: comment} %>
     <%end%>
   </ul>
 </div>
