--- a/app/views/partials/_single_comment.erb
+++ b/app/views/partials/_single_comment.erb
@@ -1,4 +1,5 @@
-<span id="content"><%= comment.content %></span>
+<li><span id="content"><%= comment.content %></span>
 - by -
 <span id="commenter"><%= comment.user.username%></span>,
-<span id="time_commented"><%= timeago(comment.updated_at) %></span>
+<span id="time_commented"><%= timeago(comment.updated_at) %></span></li>
+
