--- a/app/views/posts/question.erb
+++ b/app/views/posts/question.erb
@@ -32,8 +32,7 @@
       </form>
     <% else %>
       <p>Please sign in to comment, add an answer, or post a new question.</p>
-
     <% end %>
-
+    <h5><a href="/index">Back to Home Page</a></h5>
   </div>
 </div>
