--- a/app/views/posts/question.erb
+++ b/app/views/posts/question.erb
@@ -11,6 +11,19 @@
       </div>
     </div>
 
+    <!-- Display best answer first (if we have one)  and remove it from @answers array -->
+    <% if @best_answer %>
+      <div class="best_answer" data-id=<%= @best_answer.id %> >
+        <%= best_answer %>
+        <%=erb :'partials/_voting_button'%>
+        <div class="content">
+          <%= erb :"partials/_answer_display", locals: {answer: @best_answer} %>
+          <%=erb :'partials/_show_comments', locals: {comments: @best_answer.comments.reverse}%>
+        </div>
+      </div>
+      <% @answers.delete(@best_answer) %>
+    <% end %>
+
     <% @answers.each do |answer| %>
       <div class="answer" data-id=<%=answer.id%> >
         <%=erb :'partials/_voting_button'%>
@@ -19,7 +32,7 @@
           <%=erb :'partials/_show_comments', locals: {comments: answer.comments.reverse}%>
         </div>
       </div>
-      <% end %>
+    <% end %>
 
     <!-- new question button  answer this question can only be seen if logged in-->
     <br><br>
