--- a/public/css/application.css
+++ b/public/css/application.css
@@ -12,15 +12,15 @@ th {
 }
 
 .answer {
-  border-left: 2px solid black;
+/*  border-left: 2px solid black;*/
   margin-left: 10px;
   padding-left: 20px;
 }
 
 #best_answer {
-  border-left: 3px solid green;
+/*  border-left: 3px solid green;
   margin-left: 10px;
-  padding-left: 20px;
+  padding-left: 20px;*/
 }
 
 .right {
@@ -31,9 +31,35 @@ th {
   border:1px solid black;
 }
 
-.content {
+.question, .answer {
   border-bottom: 1px solid gray;
 }
+
+.question > .content {
+  margin-top: -20%;
+}
+
+.question > .voting_button {
+  font-size: 2em;
+}
+
+.score {
+  margin-left: 15%;
+}
+
+.content {
+  display: inline-block;
+  margin-left: 10%;
+  margin-top: -10%;
+}
+
+.voting_button {
+  display: inline-block;
+  margin-top: 5%;
+  font-size: 1.25em;
+}
+
+
 
 
 
