--- a/app/views/partials/_best_answer_link.erb
+++ b/app/views/partials/_best_answer_link.erb
@@ -1,3 +1,3 @@
-<form action=<%= "/questions/#{question.id}/answers/#{answer.id}/best" %> method="post">
+<form action=<%= "/questions/#{answer.question.id}/answers/#{answer.id}/best" %> method="post">
   <input class="right" type="submit" value="Select as best answer">
 </form>
