--- a/public/css/application.css
+++ b/public/css/application.css
@@ -18,9 +18,7 @@ th {
 }
 
 #best_answer {
-/*  border-left: 3px solid green;
-  margin-left: 10px;
-  padding-left: 20px;*/
+  margin-left:40%;
 }
 
 .right {
@@ -31,32 +29,47 @@ th {
   border:1px solid black;
 }
 
+#answers_title {
+  margin-top: 5%;
+  font-weight: bold;
+  font-style: italic;
+}
+
 .question, .answer {
+  position: relative;
+  display: block;
   border-bottom: 1px solid gray;
 }
 
-.question > .content {
-  /*padding-top: -20%;*/
-}
+/*.question > .content {
+  padding-top: -20%;
+}*/
 
 .question > .voting_button {
   font-size: 2em;
+  top: 10%;
 }
 
-.score {
-  margin-left: 15%;
-}
 
 .content {
+  position: relative;
   display: inline-block;
-  margin-left: 10%;
+  width: 96%;
+  padding-left: 5%;
+/*  margin-left: 10%;*/
 /*  padding-top: -10%;*/
 }
 
 .voting_button {
+  position: absolute;
   display: inline-block;
-  margin-top: 5%;
+  z-index: 50;
+  top: 5px;
   font-size: 1.25em;
+}
+
+.score {
+  margin-left: 15%;
 }
 
 
