--- a/public/css/voting_button.css
+++ b/public/css/voting_button.css
@@ -1,3 +1,14 @@
+.glyphicon {
+  color: black;
+}
+
+.upvoted {
+  color: green;
+}
+
+.downvoted {
+  color: red;
+}
 
 .glyphicon.glyphicon-chevron-up:hover {
   color:green;
