fixed login navbar, best answer bug, and clears new answer form after submission

--- a/app/views/partials/_navbar.erb
+++ b/app/views/partials/_navbar.erb
@@ -9,14 +9,16 @@
       </ul>
     <% else %>
       <ul class="nav navbar-nav navbar-left">
-        <div class="form-group" style="margin-top:10px">
+        <li><h5 class="navbar-text"><a href="/login">Login</a></h5></li>
+
+        <!-- <div class="form-group" style="margin-top:10px">
           <input type="text" name="username" placeholder="User name">
           <input type="password" name="password" placeholder="Password">
           <input type="submit" id="login" value="Login">
-        </div>
+        </div> -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><h5 class="navbar-text" ><a href="/users/new">Create account</a></h5></li>
+        <li><h5 class="navbar-text"><a href="/users/new">Create account</a></h5></li>
       </ul>
     <% end %>
   </div>
