--- a/app/views/posts/question.erb
+++ b/app/views/posts/question.erb
@@ -17,9 +17,11 @@
     <!-- Display best answer first (if we have one)  and remove it from @answers array -->
     <div class="all-answers">
       <% if @best_answer %>
+
         <span id="best_answer"><%= best_answer %></span>
         <%= erb :"partials/_full_answer", locals: {answer: @best_answer, classes: "best_answer" } %>
         <% @answers.delete(@best_answer) %>
+        <% @best_answer.update_attributes(question_id: @question.id) %>
       <% end %>
 
       <% @answers.each do |answer| %>
